--- a/addons/mail/i18n/id.po
+++ b/addons/mail/i18n/id.po
@@ -1114,7 +1114,7 @@ msgstr ""
 #: code:addons/mail/static/src/js/client_action.js:647
 #, python-format
 msgid "Congratulations, your inbox is empty!"
-msgstr ""
+msgstr "Kamu belum memiliki pesan.."
 
 #. module: mail
 #: model:ir.model,name:mail.model_res_partner
